@@ -1,3 +1,6 @@
+2006-11-30  Alex Roitman  <shura@gramps-project.org>
+	* POTFILES.in: List new files.
+
 2006-11-29  Lubo Vasko  <pgval@post.sk>
 	* sk.po: Translation update.
 
