@@ -1,3 +1,8 @@
+2006-11-30  Alex Roitman  <shura@gramps-project.org>
+	* src/Filters/Rules/Makefile.am: Ship new file.
+	* src/Filters/Rules/Family/Makefile.am: Ship new file.
+	* src/Filters/Rules/Person/Makefile.am: Ship new file.
+
 2006-11-30  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
 	* src/Filters/Rules/*: Add new Rule HasMarkerOf
 	* src/FilterEditor/_EditRule.py: Support MarkerType
